# Examen_Parcial_3_Vinculante

./: CMakeLists.txt  README.md  main.cpp
Actor/: Actor.cpp  Actor.h
Crud/: crud.cpp  crud.h
Launcher/: Launcher.cpp  Launcher.h
Tarea/: Tarea.cpp  Tarea.h
